src/locus_tui/snapshots/engram__locus_tui__tui_tests__tests__contexts_view.snap
---
source: src/locus_tui/tui_tests.rs
expression: content
---
Engram Locus  [Contexts]  Tasks: 3  Workflows: 0  Tab:next  q:quit  t:theme                                             
                                                                                                                        
                                                                                                                        
┌Contexts (2)──────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Title                                                                     Relevance  Source               Created     │
│OAuth spec RFC 6749                                                       high       https://rfc-editor.o 2026-04-07  │
│Rate limiter design notes                                                 medium     internal             2026-04-07  │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Content───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│The OAuth 2.0 Authorization Framework defines a protocol for delegated authorization.                                 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  j/k: navigate   Enter:detail   Tab: next view                                                                         
  Tab:next view  q:quit  t:theme  j/k:select  g/G:top/bottom  r:refresh  ?:help
