src/locus_tui/snapshots/engram__locus_tui__tui_tests__tests__reasoning_view.snap
---
source: src/locus_tui/tui_tests.rs
expression: content
---
Engram Locus  [Reasoning]  Tasks: 3  Workflows: 0  Tab:next  q:quit  t:theme                                            
                                                                                                                        
                                                                                                                        
┌Reasoning─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Reasoning  [2 nodes]  Enter: expand/collapse  j/k: navigate                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Nodes─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│▶ Choose OAuth over API keys                                                                                          │
│▶ Token bucket vs leaky bucket                                                                                        │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Detail────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Title: Choose OAuth over API keys                                                                                     │
│Preview: OAuth 2.0 provides delegated auth without sharing credentials                                                │
│Depth: 0  Expanded: false  ID: [UUID]                                                   │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  Tab:next view  q:quit  t:theme  j/k:select  g/G:top/bottom  r:refresh  ?:help
