src/locus_tui/snapshots/engram__locus_tui__tui_tests__tests__relationships_view.snap
---
source: src/locus_tui/tui_tests.rs
expression: content
---
Engram Locus  [Relationships]  Tasks: 0  Workflows: 0  Tab:next  q:quit  t:theme                                        
                                                                                                                        
                                                                                                                        
┌Nodes─────────────────────────────────────────┐┌Edges from: src-task──────────────────────────────────────────────────┐
│[task] src-task                               ││──[references]──▶ tgt-ctx-                                            │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              ││                                                                      │
│                                              │└──────────────────────────────────────────────────────────────────────┘
└──────────────────────────────────────────────┘  j/k: navigate nodes   Tab: next view                                  
  Tab:next view  q:quit  t:theme  j/k:select  g/G:top/bottom  r:refresh
