src/locus_tui/snapshots/engram__locus_tui__tui_tests__tests__search_view_empty.snap
---
source: src/locus_tui/tui_tests.rs
expression: content
---
Engram Locus  [Search]  Tasks: 0  Workflows: 0  Tab:next  q:quit  t:theme                                               
                                                                                                                        
                                                                                                                        
┌Search────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Search:                                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Results (0)───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Press / to enter search mode, type query, Enter to search                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  /:enter search   Tab:next view                                                                                        
  Tab:next view  q:quit  t:theme  j/k:select  g/G:top/bottom  r:refresh
