src/locus_tui/snapshots/engram__locus_tui__tui_tests__tests__sync_view_empty.snap
---
source: src/locus_tui/tui_tests.rs
expression: content
---
Engram Locus  [Sync]  Tasks: 3  Workflows: 0  Tab:next  q:quit  t:theme                                                 
                                                                                                                        
                                                                                                                        
┌ Remotes  [j/k to select] ────────────────────────────────────────────────────────────────────────────────────────────┐
│  (no remotes configured)                                                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Sync Status ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Type                                         Local                    Remote                  Conflicts               │
│  Press R to refresh status                                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Last Operation ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│    No operation yet                                                                                                  │
│                                                                                                                      │
│[p]ull  [u]push  [b]oth  [R]efresh status                                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  Tab:next view  q:quit  t:theme  j/k:select  g/G:top/bottom  r:refresh  ?:help
