src/locus_tui/snapshots/engram__locus_tui__tui_tests__tests__sync_view_with_remotes.snap
---
source: src/locus_tui/tui_tests.rs
expression: content
---
Engram Locus  [Sync]  Tasks: 3  Workflows: 0  Tab:next  q:quit  t:theme                                                 
                                                                                                                        
                                                                                                                        
┌ Remotes  [j/k to select] ────────────────────────────────────────────────────────────────────────────────────────────┐
│  origin                                                                                                              │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Sync Status ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Type                                         Local                    Remote                  Conflicts               │
│task                                         7                        6                       1                       │
│context                                      3                        3                       0                       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Last Operation ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│    pull: 1 fetched, 1 conflicts                                                                                      │
│                                                                                                                      │
│[p]ull  [u]push  [b]oth  [R]efresh status                                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  Tab:next view  q:quit  t:theme  j/k:select  g/G:top/bottom  r:refresh  ?:help
